added heading font

--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -17,7 +17,7 @@
   <h3 class="text-centre no-margin">
     Get certificates
   </h3>
-  <p class="text-centre text-primary b-margin-full b-padding">
+  <p class="text-centre b-margin-full b-padding">
     <strong>Signed by Scottish Government Ministers</strong>
   </p>
   <div class="columns certificates">
