--- a/configuration/partials/badge.hbs
+++ b/configuration/partials/badge.hbs
@@ -1,16 +1,18 @@
 <div class="saltire-badge align-centre{{#if disabled}} disabled{{/if}}">
   {{!-- <img src="{{~>asset_url url='images/badge-background.png' ~}}" class="img-responsive" /> --}}
-  {{#ifAny (compare type 'approach') (compare type 'ascent') ~}}
-  <span class="badge-content type-{{type}}">
-    {{#if hours ~}}
-    <span class="hours-{{key}}">
-      {{hours}}
+  <span class="badge-edge type-{{type}}">
+    <span class="badge-border">
+      <span class="badge-content">
+        {{#ifAny (compare type 'approach') (compare type 'ascent') ~}}
+        {{#if hours ~}}
+        <span class="hours-{{key}}">
+          {{hours}}
+        </span>
+        {{/if ~}}
+        {{else}}
+        <img src="{{~>asset_url url=(concat 'images/badge-icon-' type '.png') ~}}" class="img-responsive" />
+        {{/ifAny ~}}
+      </span>
     </span>
-    {{/if ~}}
   </span>
-  {{else}}
-  <span class="badge-content type-{{type}}">
-    <img src="{{~>asset_url url=(concat 'images/badge-icon-' type '.png') ~}}" class="img-responsive" />
-  </span>
-  {{/ifAny ~}}
 </div>
