added final badge assets

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -90,7 +90,7 @@
 
     <header class="container">
       <section class="brand">
-        <a href="/" class="logo"><img src="{{~>asset_url url='images/logos/saltire-awards-white.png'~}}" alt="{{@root.context.metaData.title}}" /></a>
+        <a href="/" class="logo"><img src="{{~>asset_url url='images/logos/saltire-awards-white.svg'~}}" alt="{{@root.context.metaData.title}}" /></a>
       </section>
       <div class="mobile-menu-button show-lg">
         <a href="#" class="btn btn-link" aria-label="Menu" data-component="TasksTrigger"
