--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -217,6 +217,40 @@
       }'></div>
       <aside class="mobile-menu_contents sidebar">
         <div class="b-margin-full b-padding-full v-padding">
+          <h2 class="l-padding-full">
+            Menu
+            <span class="far fa-angle-left fa-fw pull-right" data-component="TasksTrigger" data-TasksTrigger='{
+              click: {
+                tasks: [
+                  {
+                    type: "elementManipulator",
+                    config: {
+                      ".mobile-menu": {
+                        removeClass: "mobile-menu_open",
+                        addClass: "mobile-menu_closing"
+                      }
+                    }
+                  },
+                  {
+                    type: "delay",
+                    config: {
+                      "500": [
+                        {
+                          type: "elementManipulator",
+                          config: {
+                            ".mobile-menu": {
+                              addClass: "mobile-menu_closed",
+                              removeClass: "mobile-menu_closing"
+                            }
+                          }
+                        }
+                      ]
+                    }
+                  }
+                ]
+              }
+            }'></span>
+          </h2>
           <ul class="menu">
             <li class="menu-item">
               <a href="/" class="l-padding-full {{#if (regexMatch @root.request.url.pathname '^/$' 'gi')}}active{{/if}}">
