--- a/src/main.scss
+++ b/src/main.scss
@@ -1083,16 +1083,19 @@ footer {
     }
   }
   h1 {
-    font-size: 1.4rem;
+    font-size: 2.5rem;
   }
   h2 {
-    font-size: 1.2rem;
+    font-size: 2.2rem;
   }
   h3 {
-    font-size: 1.1rem;
+    font-size: 2rem;
   }
   h4 {
-    font-size: 1rem;
+    font-size: 1.75rem;
+  }
+  h5 {
+    font-size: 1.5rem;
   }
 
   .table-condensed {
@@ -1147,6 +1150,16 @@ footer {
     th, td {
       display: block;
     }
+  }
+  footer .footer-copyright .logos {
+    text-align: center;
+    margin-bottom: $unit/2;
+  }
+}
+@media screen and (max-width: 400px) {
+  footer .footer-copyright .logos img {
+    display: block;
+    margin: $unit/2 auto $unit !important;
   }
 }
 
