--- a/configuration/templates/account/auth/approval-code.hbs
+++ b/configuration/templates/account/auth/approval-code.hbs
@@ -1,1 +1,1 @@
-{{#compare @root.data.accountInfo.verification_code @root.request.params.query.code}}pass{{else}}fail{{/compare}}
+{{#compare @root.data.accountInfo.approval_code @root.request.params.query.code}}pass{{else}}fail{{/compare}}
