--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -132,7 +132,7 @@
                   </a>
                   <ul class="menu">
                     <li class="menu-item">
-                      <a href="/" class="l-padding-full {{#compare @root.request.url.pathname '/'}} active{{/compare}}{{#if @root.data.accountInfo.verification_needed}} disabled{{/if}}">
+                      <a href="/" class="l-padding-full {{#compare @root.request.url.pathname '/'}} active{{/compare}}{{#if @root.data.accountInfo.approval_needed}} disabled{{/if}}">
                         <span class="far fa-fw fa-home" aria-hidden="true"></span>
                         Home
                       </a>
