--- a/configuration/partials/emails/parental-approval-body.html
+++ b/configuration/partials/emails/parental-approval-body.html
@@ -179,7 +179,7 @@
                                           <p>This is a confirmation email from the {{@root.context.metaData.title}} website. {{first_name}} {{last_name}}, has named you as their parent or guardian.</p>
                                           <p>{{@root.context.metaData.fullTitle}} are the Scottish Government’s way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.</p>
                                           <p>As {{first_name}} is under 12, we require their parent or guardian to give permission to use the {{@root.context.metaData.title}} website. You can indicate that you give permission, by clicking on the link below</p>
-                                          <a href="{{verification_url}}" color="#42842A" style="color:#42842A;font-weight:bold;">I give permission for {{first_name}} {{last_name}} to use the {{@root.context.metaData.title}} website</a>
+                                          <a href="{{approval_url}}" color="#42842A" style="color:#42842A;font-weight:bold;">I give permission for {{first_name}} {{last_name}} to use the {{@root.context.metaData.title}} website</a>
                                           <p><a href="https://{{@root.request.headers.host}}/about">Find out more about the {{@root.context.metaData.title}}</a>.</p>
                                           <p>Thank you</p>
                                           <p>{{@root.context.metaData.title}}</p>
