--- a/configuration/templates/account/auth/user-body-update.hbs
+++ b/configuration/templates/account/auth/user-body-update.hbs
@@ -3,12 +3,12 @@
     {{#json key='users' type='array'}}
       {{#json}}
         {{#if @root.data.codeRequired}}
-          {{{json key='verification_code' value=code}}},
-          {{{json key='verification_email' value=verification_email}}},
-          {{#json key='verification_url' type="text"}}https://{{@root.request.headers.host}}/user-approval/?code={{code}}&user_id={{external_id}}{{/json}},
-          {{#json key='verification_needed' type="boolean"}}true{{/json}},
+          {{{json key='approval_code' value=code}}},
+          {{{json key='approval_email' value=approval_email}}},
+          {{#json key='approval_url' type="text"}}https://{{@root.request.headers.host}}/user-approval/?code={{code}}&user_id={{external_id}}{{/json}},
+          {{#json key='approval_needed' type="boolean"}}true{{/json}},
         {{else}}
-          "verification_needed" : false, {{!-- Hack - it's not possible to enter false in the json parser due to a bug --}}
+          "approval_needed" : false, {{!-- Hack - it's not possible to enter false in the json parser due to a bug --}}
         {{/if}}
         {{{json key='first_name' value=first_name}}},
         {{{json key='last_name' value=last_name}}},
