--- a/configuration/templates/account/email/approval.hbs
+++ b/configuration/templates/account/email/approval.hbs
@@ -8,7 +8,7 @@
     "to": "alex.nuttgens@scvo.org.uk",
     "wouldbe": "{{>support_name}} <{{>support_email_address}}>",
     {{else}}
-    "to": "{{{verification_email}}}",
+    "to": "{{{approval_email}}}",
     {{/compare ~}}
     "o:tag": "{{{type}}}",
     "o:tracking": true,
