--- a/configuration/templates/account/sidebar.hbs
+++ b/configuration/templates/account/sidebar.hbs
@@ -8,7 +8,7 @@
 </h4>
 <ul class="menu">
   <li class="menu-item">
-    <a href="/" class="l-padding-full {{#compare @root.request.url.pathname '/'}} active{{/compare}}{{#if @root.data.accountInfo.verification_needed}} disabled{{/if}}">
+    <a href="/" class="l-padding-full {{#compare @root.request.url.pathname '/'}} active{{/compare}}{{#if @root.data.accountInfo.approval_needed}} disabled{{/if}}">
       <span class="far fa-fw fa-home" aria-hidden="true"></span>
       Home
     </a>
@@ -17,7 +17,7 @@
   {{#compare label "!==" "Sign out" ~}}
   {{#if (contains user-types @root.data.accountInfo.user_type) ~}}
   <li class="menu-item">
-    <a href="{{stripTrailingSlash path}}" class="l-padding-full {{#if (regexMatch @root.request.url.pathname route 'gi')}} active{{/if}}{{#if @root.data.accountInfo.verification_needed}} disabled{{/if}}">
+    <a href="{{stripTrailingSlash path}}" class="l-padding-full {{#if (regexMatch @root.request.url.pathname route 'gi')}} active{{/if}}{{#if @root.data.accountInfo.approval_needed}} disabled{{/if}}">
       {{#if icon ~}}
       <span class="far fa-fw fa-{{icon}}" aria-hidden="true"></span>
       {{/if ~}}
