--- a/configuration/partials/certificate/content.hbs
+++ b/configuration/partials/certificate/content.hbs
@@ -33,7 +33,7 @@
         {{else}}
         {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
         {{#unless (compare hours 1) ~}}
-        {{#unless (compare @root.data.verifyHoursInfo.award ">" hours) ~}}
+        {{#unless (compare @root.data.accountInfo.hours_verify_award ">" hours) ~}}
         "text": {{>pdf_metadata_value key="title" default=(concat hours " hours")}},
         "color": "{{getProperty @root.context.metaData.theme type}}",
         {{/unless ~}}
@@ -80,7 +80,7 @@
         {{else}}
         {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
         {{#unless (compare hours 1) ~}}
-        {{#unless (compare @root.data.verifyHoursInfo.award ">" hours) ~}}
+        {{#unless (compare @root.data.accountInfo.hours_verify_award ">" hours) ~}}
         {{#unless in_progress ~}}
         "text": {{>pdf_metadata_value key="title" default="Congratulations on your achievement of completing"}},
         {{else}}
@@ -110,7 +110,7 @@
         {{else}}
         {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
         {{#unless (compare hours 1) ~}}
-        {{#unless (compare @root.data.verifyHoursInfo.award ">" hours) ~}}
+        {{#unless (compare @root.data.accountInfo.hours_verify_award ">" hours) ~}}
         "text": {{>pdf_metadata_value key="title" default=type_name}},
         "color": "{{getProperty @root.context.metaData.theme type}}",
         {{/unless ~}}
