--- a/configuration/templates/volunteering/awards.hbs
+++ b/configuration/templates/volunteering/awards.hbs
@@ -4,7 +4,7 @@
   <ul class="step">
     {{#each @root.context.metaData.certificates ~}}
     {{#ifAny (compare type "approach") (compare type "ascent") ~}}
-    <li class="step-item{{#compare @root.data.verifyHoursInfo.award hours}} active{{/compare}}">
+    <li class="step-item{{#compare @root.data.accountInfo.hours_verify_award hours}} active{{/compare}}">
       <a href="#" class="tooltip" data-tooltip="{{certificate_name}} hours">{{hours}}</a>
     </li>
     {{/ifAny ~}}
@@ -15,7 +15,7 @@
   {{#ifAny (compare type "approach") (compare type "ascent") ~}}
   {{!-- It's already awarded --}}
   {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
-  {{#unless (compare @root.data.verifyHoursInfo.award ">" hours) ~}}
+  {{#unless (compare @root.data.accountInfo.hours_verify_award ">" hours) ~}}
   <div class="columns">
     <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto t-margin-full">
       <h2 class="text-center">
@@ -35,7 +35,7 @@
   </div>
   {{/unless ~}}
   {{else}}
-  {{#compare @root.data.verifyHoursInfo.award "===" hours ~}}
+  {{#compare @root.data.accountInfo.hours_verify_award "===" hours ~}}
   <div class="columns">
     <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto t-margin-full">
       {{!-- It's being verified --}}
@@ -51,7 +51,7 @@
   </div>
   {{else}}
   {{!-- A bigger award is being verified --}}
-  {{#compare @root.data.verifyHoursInfo.award ">" hours ~}}
+  {{#compare @root.data.accountInfo.hours_verify_award ">" hours ~}}
   {{!-- It's being verified --}}
   {{!-- {{> badge type=type key=(slugify certificate_name) hours=hours}}
   <div class="text-center description">
