possibly working candidate. Test Certificates!

--- a/configuration/partials/emails/admin-approval-body.html
+++ b/configuration/partials/emails/admin-approval-body.html
@@ -176,7 +176,7 @@
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#000000;">
                                           <p>Hello,</p>
-                                          <p>This is a request for approval from the {{@root.context.metaData.title}} website. {{first_name}} {{last_name}}, has signed up as a group administrator for the {{@root.context.metaData.title}}.</p>
+                                          <p>This is a request for approval from the {{@root.context.metaData.title}} website. {{first_name}} {{last_name}}, has signed up as a group administrator on behalf of {{organisation_name}} for the {{@root.context.metaData.title}}.</p>
                                           <p>Please check with your records that this user is an appropriate person to be administrating {{@root.context.metaData.title}} volunteer groups, and if so, click the link below.</p>
                                           <a href="{{approval_url}}" color="#42842A" style="color:#42842A;font-weight:bold;">I give permission for {{first_name}} {{last_name}} to use the {{@root.context.metaData.title}} website as a group administrator</a>
                                           <p>Thank you</p>
