--- a/configuration/partials/certificate/content.hbs
+++ b/configuration/partials/certificate/content.hbs
@@ -2,21 +2,24 @@
   "image": "{{> certificate_images_png_saltire}}",
   "width": 160,
   "alignment": "center",
-  "margin": [0, 0, 0, 0]
+  "margin": [0, 0, 0, 0],
+  "font": "Sonder-Sans3"
 },
 {
   "text": {{>pdf_metadata_value key="title" default="VOLUNTEERING FOR"}},
   "fontSize": 12,
   "bold": true,
   "alignment": "center",
-  "margin": [0, 5, 0, 0]
+  "margin": [0, 5, 0, 0],
+  "font": "Sonder-Sans3"
 },
 {
   "text": {{>pdf_metadata_value key="title" default="12 TO 25 YEAR OLDS"}},
   "fontSize": 12,
   "bold": true,
   "alignment": "center",
-  "margin": [0, 0, 0, 0]
+  "margin": [0, 0, 0, 0],
+  "font": "Sonder-Sans3"
 },
 {
   "columns": [
@@ -52,7 +55,8 @@
         "fontSize": 38,
         "bold": false,
         "alignment": "center",
-        "margin": [0, 10, 0, 0]
+        "margin": [0, 10, 0, 0],
+        "font": "Sonder-Sans3"
       },
       {
         {{#compare award "summit" ~}}
@@ -64,7 +68,8 @@
         "fontSize": 18,
         "bold": true,
         "alignment": "center",
-        "margin": [0, 0, 0, 5]
+        "margin": [0, 0, 0, 5],
+        "font": "Sonder-Sans3"
       },
       {
         {{#compare award "hours" ~}}
@@ -158,7 +163,8 @@
   "fontSize": 20,
   "bold": false,
   "alignment": "center",
-  "margin": [0, 30, 0, 0]
+  "margin": [0, 30, 0, 0],
+  "font": "Sonder-Sans3"
 },
 {{#each tasks ~}}
 {{#ifAny (ifAll (compare ../type "group") (compare ../user.hours_verified "!==" 0) (compare ../user.hours_verified "!==" 1)) (ifAll (compare hours_verified "!==" 0) (compare hours_verified "!==" 1)) ~}}
