Fixing font references

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -55,6 +55,20 @@
 
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 
+  <style>
+    @font-face {
+      font-family: 'Sonder Sans 3';
+      src: url('{{~>asset_url url='fonts/Sonder-Sans3.eot'~}}');
+      src: url('{{~>asset_url url='fonts/Sonder-Sans3.eot#iefix'~}}') format('embedded-opentype'),
+          url('{{~>asset_url url='fonts/Sonder-Sans3.woff2'~}}') format('woff2'),
+          url('{{~>asset_url url='fonts/Sonder-Sans3.woff'~}}') format('woff'),
+          url('{{~>asset_url url='fonts/Sonder-Sans3.eot'~}}') format('truetype'),
+          url('{{~>asset_url url='fonts/Sonder-Sans3.svg#Sonder-Sans3'~}}') format('svg');
+      font-weight: normal;
+      font-style: normal;
+    }
+  </style>
+
   <link type="text/css" rel="stylesheet" href="{{~>asset_url url='libraries/leaflet/leaflet.css'~}}" />
   <link type="text/css" rel="stylesheet" href="{{~>asset_url url='libraries/fontawesome-pro/css/all.min.css'~}}" />
   <link type="text/css" rel="stylesheet" href="{{~>asset_url url='main.css'}}" />
