--- a/configuration/templates/volunteering/query-hours.hbs
+++ b/configuration/templates/volunteering/query-hours.hbs
@@ -83,7 +83,27 @@
             </form>
           {{/unless ~}}
         {{/each ~}}
-      </div>
+        <div class="columns">
+          <div class="column col-2">
+            <strong>Testimonial</strong>
+          </div>
+        </div>
+        <form action="/update-task-testimonial/{{task_id}}?c={{@root.request.params.query.c}}&user_id={{@root.request.params.query.user_id}}" class="inline-hours-form" data-component="TasksTrigger" data-form-element=">" data-success-hide="true" data-next-task="empty-collapse" data-TasksTrigger="ajax-form-handler">
+
+          <div class="form-group">
+
+            <div class="columns">
+              <div class="col-8">
+                <textarea rows="3"  placeholder="Let people know what your volunteers have achieved" cols="40" id="testimonial" name="testimonial" class="inline-form-input inline-edit" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.testimonial}}>{{testimonial}}</textarea>
+              </div>
+              <div class="col-1"></div>
+              <div class="col-3">
+                <button type="submit" class="btn btn-success btn-block inline-update-button b-margin" >Save</button>
+              </div>
+            </div>
+
+          </div>
+        </form>
       </div>
     {{/compare ~}}
   {{/each ~}}
